--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.0
   material_floating_search_bar: ^0.3.6
+  firebase_auth: ^3.2.0
+  cloud_firestore: ^3.1.0
+  provider: ^6.0.1
+  firebase_core: ^1.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
